wither_derive/tests/fail/model-unrecognized-attr.stderr
error: unrecognized wither model attribute
 --> $DIR/model-unrecognized-attr.rs:5:9
  |
5 | #[model(bad_attr="val")]
  |         ^^^^^^^^
